[project]
name = "simple-chatbot"
version = "1.0.0"
description = "A simple chatbot using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.9",
    "langchain>=0.3.20",
    "langgraph>=0.3.0",
    "pydantic>=2.5.0",
    "ipykernel>=6.29.5",
    "langchain_anthropic>=0.1.0",
    "langchain_openai>=0.1.0",
    "tavily-python>=0.3.0",
    "langchain_community>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.77",
    "mypy>=1.0.0",
    "pre-commit>=3.3.2",
    "pylint>=3.0.0",
    "requests>=2.31.0",
    "ruff>=0.0.270",
    "types-requests>=2.31.0",
]

# ----------------------
# Ruff Configuration
# ----------------------
[tool.ruff]
# Enable common linting rules
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "F401", 
    "F403", 
    "E402", 
    "PL",  # pylint handles this
    "D", # pydoc handled by pylint
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".uv",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Enabling incremental mode to speed up checking
incremental = true
cache_dir = ".mypy_cache"

# ----------------------
# Pylint Configuration
# ----------------------
[tool.pylint.master]
jobs = 4
ignore = [".git", ".uv", ".venv"]

[tool.pylint]
disable = [
    "import-error",
    "no-name-in-module",
    "missing-docstring",
    "line-too-long",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "invalid-name",
    "fixme",
    "redefined-outer-name"
]

[tool.pylint.format]
max-line-length = 88
